# cork

./: .gitignore  .prettierignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  eslint.config.js  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: quality.yml  release.yml
.specs/: DEFERRED.md
.specs/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.specs/project/: PROJECT.md  ROADMAP.md  STATE.md
brand/: README.md
prototype/: README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo
prototype/src/: App.tsx  index.css
scripts/: bench-index.mjs  check-bundle-size.mjs  check-parser-parity.mjs
src/: index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/skills/: fix-spelling.md  generate-note.md  related-notes.md  slash-continue.md  slash-expand.md  slash-rephrase.md  suggest-tags.md  summarize.md
src-tauri/src/: diagnostics.rs  error.rs  export.rs  lib.rs  main.rs  menu.rs  settings.rs  shortcuts.rs  tray.rs  window.rs
src-tauri/src/ai/: cache.rs  db.rs  mod.rs  prompt.rs  runner.rs  skills.rs  telemetry.rs  tiers.rs
src-tauri/src/assets/: mod.rs
src-tauri/src/index/: migrate.rs  mod.rs  parser.rs  paths.rs  query.rs  resolver.rs  schema.sql  search.rs  worker.rs
src-tauri/src/index/migrations/: 003_assets.sql  004_links_ambiguous.sql
src-tauri/src/todos/: mod.rs
src-tauri/src/vault/: archive.rs  bulk.rs  fingerprint.rs  folders.rs  frontmatter.rs  io.rs  list.rs  mod.rs  rename_propagation.rs  scaffold.rs  settings.rs  templates.rs  watcher.rs
src-tauri/src/vcs/: mod.rs  remote.rs
src-tauri/tests/: index_crash.rs  parity.rs
src-tauri/tests/fixtures/vault-list/: filename-title.md  from-heading.md  link.md  note-01.md  note-02.md  note-03.md  note-04.md  note-05.md  note-06.md  readme.txt
src-tauri/tests/fixtures/vault-list/nested/: nested-note.md
src-tauri/tests/fixtures/vault-list/nested/deep/: deep-note.md
src/app/: App.tsx  Providers.tsx
src/cm/: autocomplete.ts  checkboxes.ts  dropPaste.ts  extensions.ts  imagePreview.ts  livePreview.ts  markdown.ts  theme.ts  wikilinks.ts
src/hooks/: useBulkSelection.ts  useDragDropFolder.ts  useForceGraph.ts  usePaletteSearch.ts  useShortcuts.ts
src/ipc/: IpcContract.ts  client.ts  errors.ts  types.ts
src/screens/: EmptyVault.tsx  LoginScreen.tsx  Shell.tsx  TriageBody.tsx  WelcomeScreen.tsx
src/services/: assetIngest.ts  assetResolver.ts  bulkOps.ts  createNote.ts  dailyNote.ts  densityRuntime.ts  exportNote.ts  folderOps.ts  insertTemplate.ts  menuActions.ts  (+3 more)
(+547 files in other folders)
