[package]
name = "noxe"
version = "0.1.0"
description = "Noxe — local-first Markdown notes"
authors = ["Noxe contributors"]
edition = "2021"

[lib]
name = "noxe_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

[dev-dependencies]
serde_json = "1"

