[package]
name = "noxe"
version = "0.1.0"
description = "Noxe — local-first Markdown notes"
authors = ["Noxe contributors"]
edition = "2021"

[lib]
name = "noxe_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "test", "tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
walkdir = "2"
notify = "6"
notify-debouncer-mini = "0.7.0"
serde_yaml = "0.9.34"
trash = "5.2.6"
sha1 = "0.11.0"
tempfile = "3.27.0"
tauri-plugin-dialog = "2"
regex = "1"
pulldown-cmark = "0.12"
rusqlite = { version = "0.31", features = ["bundled"] }
tauri-plugin-window-state = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-os = "2"

[dev-dependencies]
serde_json = "1"

