[package]
name = "Cork"
version = "0.1.0"
description = "Cork — local-first Markdown notes"
authors = ["Cork contributors"]
edition = "2021"

[lib]
name = "cork_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [ "image-png", "protocol-asset", "test", "tray-icon"] }
tauri-plugin-opener = "2"
# F33 — Tauri updater plugin is installed as a dependency but not yet
# registered in lib.rs::run. Registration requires a signing keypair
# (`pnpm tauri signer generate`) and an `endpoints[]` entry pointing at a
# real `latest.json`. Wire-up lands when CI secrets exist.
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
walkdir = "2"
notify = "6"
notify-debouncer-mini = "0.7.0"
serde_yaml = "0.9.34"
trash = "5.2.6"
sha1 = "0.11.0"
tempfile = "3.27.0"
tauri-plugin-dialog = "2"
regex = "1"
pulldown-cmark = "0.12"
rusqlite = { version = "0.31", features = ["bundled"] }
tauri-plugin-window-state = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-os = "2"
blake3 = "1.5"
include_dir = "0.7"
gray_matter = "0.2"
dirs = "5"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }

[dev-dependencies]
serde_json = "1"

